<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.havatime.havatime.havatime.com.havatime.havatime.MainActivity"
    android:weightSum="8"
    android:paddingBottom="@dimen/general_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_weight="3"
        android:weightSum="3">

        <ImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/airport_shuttle"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_text_size"></TextView>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        android:layout_marginTop="@dimen/general_margin"
        android:orientation="vertical"
        android:layout_weight="3"
        android:weightSum="2">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general_margin"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/take_off_airport"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/general_text_size" />

            <Spinner
                android:id="@+id/airport_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="#c0c0c0" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="@dimen/general_margin"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:text="@string/boarding_point"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/general_text_size" />

            <Spinner
                android:id="@+id/boarding_point_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:weightSum="2"
        android:layout_weight="1.5">

        <LinearLayout

            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="4dp"
            android:paddingRight="12dp"
            android:paddingEnd="12dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:paddingTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/general_text_size" />

            <TextView
                android:id="@+id/date_picker_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/date_text_size" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:paddingRight="4dp"
            android:paddingEnd="4dp"
            android:paddingTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/general_text_size" />

            <TextView

                android:id="@+id/time_picker_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/date_text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/general_margin"
        android:orientation="horizontal"
        android:weightSum="2">

        <Switch

            android:id="@+id/international_flight_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/international_flight"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/general_text_size" />

        <Switch

            android:id="@+id/luggage_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/i_have_luggage"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/general_text_size" />

    </LinearLayout>

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        android:layout_marginTop="@dimen/general_margin"
        android:background="@color/risk40"
        android:text="@string/search"
        android:textSize="@dimen/general_text_size"/>

</LinearLayout>
